antlr/thrift/parser/thrift_parser.go
// Code generated from Thrift.g4 by ANTLR 4.8. DO NOT EDIT.

package parser // Thrift

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'include'", "'namespace'", "'*'", "'cpp_namespace'", "'php_namespace'",
	"'cpp_include'", "'const'", "'='", "'typedef'", "'enum'", "'{'", "'}'",
	"'senum'", "'struct'", "'union'", "'exception'", "'service'", "'extends'",
	"':'", "'required'", "'optional'", "'('", "')'", "'oneway'", "'async'",
	"'void'", "'throws'", "'map'", "'<'", "'>'", "'set'", "'list'", "'cpp_type'",
	"'['", "']'", "';'", "", "", "", "'bool'", "'byte'", "'i16'", "'i32'",
	"'i64'", "'double'", "'string'", "'binary'", "", "", "','",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "INTEGER", "HEX_INTEGER", "DOUBLE", "TYPE_BOOL", "TYPE_BYTE", "TYPE_I16",
	"TYPE_I32", "TYPE_I64", "TYPE_DOUBLE", "TYPE_STRING", "TYPE_BINARY", "LITERAL",
	"IDENTIFIER", "COMMA", "WS", "SL_COMMENT", "ML_COMMENT",
}

var ruleNames = []string{
	"document", "header", "include", "namespace", "cpp_include", "definition",
	"const_rule", "typedef", "enum_rule", "enum_field", "senum", "goStruct",
	"union", "exception", "service", "field", "field_id", "field_req", "function",
	"oneway", "function_type", "throws_list", "type_annotations", "type_annotation",
	"annotation_value", "field_type", "base_type", "container_type", "map_type",
	"set_type", "list_type", "cpp_type", "const_value", "integer", "const_list",
	"const_map_entry", "const_map", "list_separator", "real_base_type",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type ThriftParser struct {
	*antlr.BaseParser
}

func NewThriftParser(input antlr.TokenStream) *ThriftParser {
	this := new(ThriftParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Thrift.g4"

	return this
}

// ThriftParser tokens.
const (
	ThriftParserEOF         = antlr.TokenEOF
	ThriftParserT__0        = 1
	ThriftParserT__1        = 2
	ThriftParserT__2        = 3
	ThriftParserT__3        = 4
	ThriftParserT__4        = 5
	ThriftParserT__5        = 6
	ThriftParserT__6        = 7
	ThriftParserT__7        = 8
	ThriftParserT__8        = 9
	ThriftParserT__9        = 10
	ThriftParserT__10       = 11
	ThriftParserT__11       = 12
	ThriftParserT__12       = 13
	ThriftParserT__13       = 14
	ThriftParserT__14       = 15
	ThriftParserT__15       = 16
	ThriftParserT__16       = 17
	ThriftParserT__17       = 18
	ThriftParserT__18       = 19
	ThriftParserT__19       = 20
	ThriftParserT__20       = 21
	ThriftParserT__21       = 22
	ThriftParserT__22       = 23
	ThriftParserT__23       = 24
	ThriftParserT__24       = 25
	ThriftParserT__25       = 26
	ThriftParserT__26       = 27
	ThriftParserT__27       = 28
	ThriftParserT__28       = 29
	ThriftParserT__29       = 30
	ThriftParserT__30       = 31
	ThriftParserT__31       = 32
	ThriftParserT__32       = 33
	ThriftParserT__33       = 34
	ThriftParserT__34       = 35
	ThriftParserT__35       = 36
	ThriftParserINTEGER     = 37
	ThriftParserHEX_INTEGER = 38
	ThriftParserDOUBLE      = 39
	ThriftParserTYPE_BOOL   = 40
	ThriftParserTYPE_BYTE   = 41
	ThriftParserTYPE_I16    = 42
	ThriftParserTYPE_I32    = 43
	ThriftParserTYPE_I64    = 44
	ThriftParserTYPE_DOUBLE = 45
	ThriftParserTYPE_STRING = 46
	ThriftParserTYPE_BINARY = 47
	ThriftParserLITERAL     = 48
	ThriftParserIDENTIFIER  = 49
	ThriftParserCOMMA       = 50
	ThriftParserWS          = 51
	ThriftParserSL_COMMENT  = 52
	ThriftParserML_COMMENT  = 53
)

// ThriftParser rules.
const (
	ThriftParserRULE_document         = 0
	ThriftParserRULE_header           = 1
	ThriftParserRULE_include          = 2
	ThriftParserRULE_namespace        = 3
	ThriftParserRULE_cpp_include      = 4
	ThriftParserRULE_definition       = 5
	ThriftParserRULE_const_rule       = 6
	ThriftParserRULE_typedef          = 7
	ThriftParserRULE_enum_rule        = 8
	ThriftParserRULE_enum_field       = 9
	ThriftParserRULE_senum            = 10
	ThriftParserRULE_goStruct         = 11
	ThriftParserRULE_union            = 12
	ThriftParserRULE_exception        = 13
	ThriftParserRULE_service          = 14
	ThriftParserRULE_field            = 15
	ThriftParserRULE_field_id         = 16
	ThriftParserRULE_field_req        = 17
	ThriftParserRULE_function         = 18
	ThriftParserRULE_oneway           = 19
	ThriftParserRULE_function_type    = 20
	ThriftParserRULE_throws_list      = 21
	ThriftParserRULE_type_annotations = 22
	ThriftParserRULE_type_annotation  = 23
	ThriftParserRULE_annotation_value = 24
	ThriftParserRULE_field_type       = 25
	ThriftParserRULE_base_type        = 26
	ThriftParserRULE_container_type   = 27
	ThriftParserRULE_map_type         = 28
	ThriftParserRULE_set_type         = 29
	ThriftParserRULE_list_type        = 30
	ThriftParserRULE_cpp_type         = 31
	ThriftParserRULE_const_value      = 32
	ThriftParserRULE_integer          = 33
	ThriftParserRULE_const_list       = 34
	ThriftParserRULE_const_map_entry  = 35
	ThriftParserRULE_const_map        = 36
	ThriftParserRULE_list_separator   = 37
	ThriftParserRULE_real_base_type   = 38
)

// IDocumentContext is an interface to support dynamic dispatch.
type IDocumentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDocumentContext differentiates from other interfaces.
	IsDocumentContext()
}

type DocumentContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDocumentContext() *DocumentContext {
	var p = new(DocumentContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ThriftParserRULE_document
	return p
}

func (*DocumentContext) IsDocumentContext() {}

func NewDocumentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DocumentContext {
	var p = new(DocumentContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ThriftParserRULE_document

	return p
}

func (s *DocumentContext) GetParser() antlr.Parser { return s.parser }

func (s *DocumentContext) EOF() antlr.TerminalNode {
	return s.GetToken(ThriftParserEOF, 0)
}

func (s *DocumentContext) AllHeader() []IHeaderContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IHeaderContext)(nil)).Elem())
	var tst = make([]IHeaderContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IHeaderContext)
		}
	}

	return tst
}

func (s *DocumentContext) Header(i int) IHeaderContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IHeaderContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IHeaderContext)
}

func (s *DocumentContext) AllDefinition() []IDefinitionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IDefinitionContext)(nil)).Elem())
	var tst = make([]IDefinitionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IDefinitionContext)
		}
	}

	return tst
}

func (s *DocumentContext) Definition(i int) IDefinitionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDefinitionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IDefinitionContext)
}

func (s *DocumentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DocumentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DocumentContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ThriftListener); ok {
		listenerT.EnterDocument(s)
	}
}

func (s *DocumentContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ThriftListener); ok {
		listenerT.ExitDocument(s)
	}
}

func (p *ThriftParser) Document() (localctx IDocumentContext) {
	localctx = NewDocumentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ThriftParserRULE_document)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(81)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<ThriftParserT__0)|(1<<ThriftParserT__1)|(1<<ThriftParserT__3)|(1<<ThriftParserT__4)|(1<<ThriftParserT__5))) != 0 {
		{
			p.SetState(78)
			p.Header()
		}

		p.SetState(83)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(87)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<ThriftParserT__6)|(1<<ThriftParserT__8)|(1<<ThriftParserT__9)|(1<<ThriftParserT__12)|(1<<ThriftParserT__13)|(1<<ThriftParserT__14)|(1<<ThriftParserT__15)|(1<<ThriftParserT__16))) != 0 {
		{
			p.SetState(84)
			p.Definition()
		}

		p.SetState(89)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(90)
		p.Match(ThriftParserEOF)
	}

	return localctx
}

// IHeaderContext is an interface to support dynamic dispatch.
type IHeaderContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsHeaderContext differentiates from other interfaces.
	IsHeaderContext()
}

type HeaderContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyHeaderContext() *HeaderContext {
	var p = new(HeaderContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ThriftParserRULE_header
	return p
}

func (*HeaderContext) IsHeaderContext() {}

func NewHeaderContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *HeaderContext {
	var p = new(HeaderContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ThriftParserRULE_header

	return p
}

func (s *HeaderContext) GetParser() antlr.Parser { return s.parser }

func (s *HeaderContext) Include() IIncludeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIncludeContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIncludeContext)
}

func (s *HeaderContext) Namespace() INamespaceContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INamespaceContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(INamespaceContext)
}

func (s *HeaderContext) Cpp_include() ICpp_includeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICpp_includeContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICpp_includeContext)
}

func (s *HeaderContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *HeaderContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *HeaderContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ThriftListener); ok {
		listenerT.EnterHeader(s)
	}
}

func (s *HeaderContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ThriftListener); ok {
		listenerT.ExitHeader(s)
	}
}

func (p *ThriftParser) Header() (localctx IHeaderContext) {
	localctx = NewHeaderContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ThriftParserRULE_header)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(95)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case ThriftParserT__0:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(92)
			p.Include()
		}

	case ThriftParserT__1, ThriftParserT__3, ThriftParserT__4:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(93)
			p.Namespace()
		}

	case ThriftParserT__5:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(94)
			p.Cpp_include()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IIncludeContext is an interface to support dynamic dispatch.
type IIncludeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsIncludeContext differentiates from other interfaces.
	IsIncludeContext()
}

type IncludeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyIncludeContext() *IncludeContext {
	var p = new(IncludeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ThriftParserRULE_include
	return p
}

func (*IncludeContext) IsIncludeContext() {}

func NewIncludeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *IncludeContext {
	var p = new(IncludeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ThriftParserRULE_include

	return p
}

func (s *IncludeContext) GetParser() antlr.Parser { return s.parser }

func (s *IncludeContext) LITERAL() antlr.TerminalNode {
	return s.GetToken(ThriftParserLITERAL, 0)
}

func (s *IncludeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IncludeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *IncludeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ThriftListener); ok {
		listenerT.EnterInclude(s)
	}
}

func (s *IncludeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ThriftListener); ok {
		listenerT.ExitInclude(s)
	}
}

func (p *ThriftParser) Include() (localctx IIncludeContext) {
	localctx = NewIncludeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, ThriftParserRULE_include)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(97)
		p.Match(ThriftParserT__0)
	}
	{
		p.SetState(98)
		p.Match(ThriftParserLITERAL)
	}

	return localctx
}

// INamespaceContext is an interface to support dynamic dispatch.
type INamespaceContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsNamespaceContext differentiates from other interfaces.
	IsNamespaceContext()
}

type NamespaceContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNamespaceContext() *NamespaceContext {
	var p = new(NamespaceContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ThriftParserRULE_namespace
	return p
}

func (*NamespaceContext) IsNamespaceContext() {}

func NewNamespaceContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NamespaceContext {
	var p = new(NamespaceContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ThriftParserRULE_namespace

	return p
}

func (s *NamespaceContext) GetParser() antlr.Parser { return s.parser }

func (s *NamespaceContext) AllIDENTIFIER() []antlr.TerminalNode {
	return s.GetTokens(ThriftParserIDENTIFIER)
}

func (s *NamespaceContext) IDENTIFIER(i int) antlr.TerminalNode {
	return s.GetToken(ThriftParserIDENTIFIER, i)
}

func (s *NamespaceContext) LITERAL() antlr.TerminalNode {
	return s.GetToken(ThriftParserLITERAL, 0)
}

func (s *NamespaceContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NamespaceContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NamespaceContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ThriftListener); ok {
		listenerT.EnterNamespace(s)
	}
}

func (s *NamespaceContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ThriftListener); ok {
		listenerT.ExitNamespace(s)
	}
}

func (p *ThriftParser) Namespace() (localctx INamespaceContext) {
	localctx = NewNamespaceContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, ThriftParserRULE_namespace)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(110)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(100)
			p.Match(ThriftParserT__1)
		}
		{
			p.SetState(101)
			p.Match(ThriftParserT__2)
		}
		{
			p.SetState(102)
			_la = p.GetTokenStream().LA(1)

			if !(_la == ThriftParserLITERAL || _la == ThriftParserIDENTIFIER) {
				p.GetErrorHandler().RecoverInline(p)
			} else {
				p.GetErrorHandler().ReportMatch(p)
				p.Consume()
			}
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(103)
			p.Match(ThriftParserT__1)
		}
		{
			p.SetState(104)
			p.Match(ThriftParserIDENTIFIER)
		}
		{
			p.SetState(105)
			_la = p.GetTokenStream().LA(1)

			if !(_la == ThriftParserLITERAL || _la == ThriftParserIDENTIFIER) {
				p.GetErrorHandler().RecoverInline(p)
			} else {
				p.GetErrorHandler().ReportMatch(p)
				p.Consume()
			}
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(106)
			p.Match(ThriftParserT__3)
		}
		{
			p.SetState(107)
			p.Match(ThriftParserIDENTIFIER)
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(108)
			p.Match(ThriftParserT__4)
		}
		{
			p.SetState(109)
			p.Match(ThriftParserIDENTIFIER)
		}

	}

	return localctx
}

// ICpp_includeContext is an interface to support dynamic dispatch.
type ICpp_includeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCpp_includeContext differentiates from other interfaces.
	IsCpp_includeContext()
}

type Cpp_includeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCpp_includeContext() *Cpp_includeContext {
	var p = new(Cpp_includeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ThriftParserRULE_cpp_include
	return p
}

func (*Cpp_includeContext) IsCpp_includeContext() {}

func NewCpp_includeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Cpp_includeContext {
	var p = new(Cpp_includeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ThriftParserRULE_cpp_include

	return p
}

func (s *Cpp_includeContext) GetParser() antlr.Parser { return s.parser }

func (s *Cpp_includeContext) LITERAL() antlr.TerminalNode {
	return s.GetToken(ThriftParserLITERAL, 0)
}

func (s *Cpp_includeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Cpp_includeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Cpp_includeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ThriftListener); ok {
		listenerT.EnterCpp_include(s)
	}
}

func (s *Cpp_includeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ThriftListener); ok {
		listenerT.ExitCpp_include(s)
	}
}

func (p *ThriftParser) Cpp_include() (localctx ICpp_includeContext) {
	localctx = NewCpp_includeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, ThriftParserRULE_cpp_include)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(112)
		p.Match(ThriftParserT__5)
	}
	{
		p.SetState(113)
		p.Match(ThriftParserLITERAL)
	}

	return localctx
}

// IDefinitionContext is an interface to support dynamic dispatch.
type IDefinitionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDefinitionContext differentiates from other interfaces.
	IsDefinitionContext()
}

type DefinitionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDefinitionContext() *DefinitionContext {
	var p = new(DefinitionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ThriftParserRULE_definition
	return p
}

func (*DefinitionContext) IsDefinitionContext() {}

func NewDefinitionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DefinitionContext {
	var p = new(DefinitionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ThriftParserRULE_definition

	return p
}

func (s *DefinitionContext) GetParser() antlr.Parser { return s.parser }

func (s *DefinitionContext) Const_rule() IConst_ruleContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IConst_ruleContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IConst_ruleContext)
}

func (s *DefinitionContext) Typedef() ITypedefContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITypedefContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITypedefContext)
}

func (s *DefinitionContext) Enum_rule() IEnum_ruleContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEnum_ruleContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IEnum_ruleContext)
}

func (s *DefinitionContext) Senum() ISenumContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISenumContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISenumContext)
}

func (s *DefinitionContext) GoStruct() IGoStructContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IGoStructContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IGoStructContext)
}

func (s *DefinitionContext) Union() IUnionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IUnionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IUnionContext)
}

func (s *DefinitionContext) Exception() IExceptionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExceptionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExceptionContext)
}

func (s *DefinitionContext) Service() IServiceContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IServiceContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IServiceContext)
}

func (s *DefinitionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DefinitionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DefinitionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ThriftListener); ok {
		listenerT.EnterDefinition(s)
	}
}

func (s *DefinitionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ThriftListener); ok {
		listenerT.ExitDefinition(s)
	}
}

func (p *ThriftParser) Definition() (localctx IDefinitionContext) {
	localctx = NewDefinitionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, ThriftParserRULE_definition)

	defer func() {
		p.ExitRule()
	}()
